darkmode support to all

--- a/Full Stack Code/frontend/src/index.css
+++ b/Full Stack Code/frontend/src/index.css
@@ -4,9 +4,5 @@
 
 /* Global Transition Configuration */
 * {
-    transition-property: color,background-color;
-    transition-duration: 200ms;
-    /* Uniform duration for both */
-    transition-timing-function: ease-in-out;
-    /* Smooth easing */
+   @apply transition-colors duration-200;
 }
